--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>salam</h1>
-	<h2>sagol</h2>
+	<h1>sdsad</h1>
+	<h2>asdasds</h2>
+	<H4>sdfsdsds</H4>
+	
 </body>
 </html>
